--- a/platosemana.html
+++ b/platosemana.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8">
     <title>Plato de la semana</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color:blanchedalmond ;">
-    <h1 style="background-color:burlywood;">Plato de la semana</h1>
-    <h2 style="color:cornflowerblue">Berenjenas fritas</h2>
+<body>
+    <h1>Plato de la semana</h1>
+    <h2>Berenjenas fritas</h2>
     <p>
-    <p style="color:lightblue ;">Comensales:</p> 4 personas<br><br>
-    <p style="color:lightblue ;">Tiempo de reparación:</p> 10 minutos<br><br>
-    <p style="color:lightblue ;">Tiempo de
+    <p class="lightblue">Comensales:</p> 4 personas<br><br>
+    <p class="lightblue">Tiempo de reparación:</p> 10 minutos<br><br>
+    <p class="lightblue">Tiempo de
         cocción:</p> 12 minutos<br><br>
-    <strong style="color:cornflowerblue ;">Ingredientes:</strong><br><br>4 berenjenas.<br>Sal.<br>Pimienta<br>4
+    <strong>Ingredientes:</strong><br><br>4 berenjenas.<br>Sal.<br>Pimienta<br>4
     cucharadas de harina y aceite<br><br>
-    <strong style="color:cornflowerblue ;">Preparación:</strong><br><br>Lavar las berenjenas.<br>Cortarlas en
+    <strong>Preparación:</strong><br><br>Lavar las berenjenas.<br>Cortarlas en
     rodajas.<br>Espolvorearlas con sal<br>Dejar que
     suelten el agua durante 30 minutos.<br>Enharizarlas,ponerlas a freir durante 5 minutos en aceite bien caliente.
     </p>
